Fix alignment

--- a/index.css
+++ b/index.css
@@ -1,13 +1,18 @@
 main {
     display: grid;
     width: 600px;
-    height: 600px;
+    height: 800px;
     grid-gap: 10px;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 3fr 3fr;
-    grid-template-areas:"header     name"
-                        "attributes info"
-                        "defenses   background";
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-areas:"header     header     name       name      "
+                        "attributes attributes info       info      "
+                        "attributes attributes info       info      "
+                        "attributes attributes info       info      "
+                        "ac         hp         background background"
+                        "attacks    attacks    background background"
+                        "attacks    attacks    background background"
+                        "attacks    attacks    background background";
 }
 
 .header {
@@ -85,16 +90,6 @@ main {
 
 .info {
     grid-area: info;
-}
-
-.combat {
-    grid-area: defenses;
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 3fr;
-    grid-template-areas:"ac      hp"
-                        "attacks attacks";
 }
 
 .ac {
